--- a/tips/Base.lproj/Main.storyboard
+++ b/tips/Base.lproj/Main.storyboard
@@ -14,21 +14,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gcu-yU-BWj">
-                                <rect key="frame" x="25" y="239" width="25" height="21"/>
+                                <rect key="frame" x="25" y="209" width="25" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="l3W-Tw-kZt">
-                                <rect key="frame" x="25" y="321" width="94" height="22"/>
+                                <rect key="frame" x="25" y="291" width="94" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" id="24Y-Gu-1jI">
-                                <rect key="frame" x="25" y="287" width="275" height="10"/>
+                                <rect key="frame" x="25" y="257" width="275" height="10"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="oeo-9B-5a4">
@@ -40,7 +40,7 @@
                                 <color key="backgroundColor" red="0.15686274509803921" green="0.32941176470588235" blue="0.0039215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="fV9-mn-9ZV">
-                                <rect key="frame" x="25" y="182" width="275" height="29"/>
+                                <rect key="frame" x="25" y="187" width="275" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="18%"/>
@@ -48,31 +48,31 @@
                                     <segment title="22%"/>
                                 </segments>
                                 <connections>
-                                    <action selector="onEditingChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="ZGw-JK-e7a"/>
+                                    <action selector="onEditingChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="u4J-Hn-fXh"/>
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$10.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="n4v-cH-a6b">
-                                <rect key="frame" x="108" y="239" width="187" height="21"/>
+                                <rect key="frame" x="108" y="209" width="187" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$100.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dtn-ce-1vc">
-                                <rect key="frame" x="114" y="321" width="181" height="21"/>
+                                <rect key="frame" x="114" y="291" width="181" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3m6-9Y-Cil">
-                                <rect key="frame" x="25" y="97" width="30" height="55"/>
+                                <rect key="frame" x="25" y="232" width="30" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="46"/>
                                 <color key="textColor" red="0.19607843137254902" green="0.396078431372549" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="wC1-ta-xqE">
-                                <rect key="frame" x="63" y="110" width="236" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" id="wC1-ta-xqE">
+                                <rect key="frame" x="63" y="238" width="236" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
@@ -84,16 +84,6 @@
                                 <rect key="frame" x="129" y="20" width="67" height="72"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
-                            <view alpha="0.40000000000000002" contentMode="scaleToFill" id="TK5-i7-myn">
-                                <rect key="frame" x="228" y="237" width="72" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="0.046141651312830323" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
-                            <view alpha="0.40000000596046448" contentMode="scaleToFill" id="uds-Ou-ipr">
-                                <rect key="frame" x="228" y="317" width="72" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="0.046141651309999997" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
@@ -108,9 +98,9 @@
                         <outlet property="tipDivider" destination="24Y-Gu-1jI" id="wCX-kO-oMV"/>
                         <outlet property="tipIcon" destination="M41-bX-rOu" id="X9z-LV-oEj"/>
                         <outlet property="tipLabel" destination="n4v-cH-a6b" id="tpl-gV-T0u"/>
-                        <outlet property="tipLabelBG" destination="TK5-i7-myn" id="fpj-rs-Kcs"/>
+                        <outlet property="tipText" destination="Gcu-yU-BWj" id="b1k-lL-kA1"/>
                         <outlet property="totalLabel" destination="dtn-ce-1vc" id="C6i-D4-mpG"/>
-                        <outlet property="totalLabelBG" destination="uds-Ou-ipr" id="0Uf-HQ-owR"/>
+                        <outlet property="totalText" destination="l3W-Tw-kZt" id="YCV-Od-Ae5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
